# diff-1c

./: .gitignore  README.md  __main__.py  core.py  diff-1c-77.ini.sample  diff-1c-77.py  diff-1c.ini.sample  diff-1c.py  diff1c.ini.sample  diff1c.py  diff_1c.py  pyproject.toml  requirements.txt  settings.yaml.sample  setup.py
.dev/: pyproject.toml
diff_1c/: __about__.py  __init__.py  __main__.py  cli.py  core.py  diff_1c.py  main.py
src/diff_1c/: __about__.py  __main__.py
tests/: test_diff_1c.py
