[tool.poetry]
name = "diff-1c"
version = "6.6.1"
description = "Diff utility for 1C:Enterprise"
authors = ["Cujoko <cujoko@gmail.com>"]
readme = "README.md"
packages = [{include = "diff_1c"}]
license = "MIT"
repository = "https://github.com/Cujoko/diff-1c"
keywords = ["1c", "diff", "v8reader", "v8unpack", "gcomp"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development",
    "Topic :: Utilities"
]

[tool.poetry.scripts]
diff1c = "diff_1c.__main__:run"


[tool.poetry.dependencies]
python = "^3.9"
cjk-commons = "^3.6.1"
parse-1c-build = "^5.15.0"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.16.2"
pytest = "^7.2.1"
rope = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
