[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project]
authors = [
    {name = "Cujoko", email = "cujoko@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: Russian",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "loguru>=0.6.0",
]
description = "Diff utility for 1C:Enterprise"
keywords = ["1c", "diff", "v8reader", "v8unpack", "gcomp"]
license = {text = "MIT"}
name = "diff-1c"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
diff-1c = "diff_1c.__main__:run"

[project.urls]
repository = "https://github.com/Cujoko-Dev/diff-1c"

[tool.pdm.build]
package-dir = "../src"

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///C:/Dev/Python/commons/.dev#egg=cjk-commons",
    "-e file:///C:/Dev/Python/parse-1c-build/.dev#egg=parse-1c-build",
    
    # Пакеты B
    "-e file:///C:/Dev/Python/commons-1c/.dev#egg=commons-1c",
]

[tool.pdm.scripts]
test = "pytest"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["../src"]
testpaths = ["../tests"]
